

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d8f4ff"
    
    >

 	<EditText
 	    android:id="@+id/new_username"
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content" 
 	    android:hint="@string/new_username"
 	    android:layout_margin="10dp"
 	    android:singleLine="true" />
	<EditText
	    android:id="@+id/new_first_name" 
	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
 	    android:hint="@string/new_first_name"
 	    android:layout_below="@+id/new_username"
 	    android:layout_margin="10dp" 
 	    android:singleLine="true" />
	<EditText
	    android:id="@+id/new_last_name"
	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
 	    android:hint="@string/new_last_name"
 	    android:layout_below="@+id/new_first_name" 
 	    android:layout_margin="10dp"  
 	    android:singleLine="true" />
	<EditText
	    android:id="@+id/new_email"
	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
		android:hint="@string/new_email"
		android:layout_below="@+id/new_last_name"
		android:inputType="textEmailAddress" 
		android:layout_margin="10dp"
		android:singleLine="true" />
	<EditText
	    android:id="@+id/new_password"
	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
 	    android:hint="@string/new_password"
 	    android:layout_below="@+id/new_email" 
 	    android:inputType="textPassword"
	    android:layout_margin="10dp"
	    android:singleLine="true" />
	<EditText
	    android:id="@+id/new_password_confirm"
	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
 	    android:hint="@string/new_password_confirm" 
 	    android:layout_below="@+id/new_password" 
 	    android:inputType="textPassword" 
 	    android:layout_margin="10dp"
 	    android:singleLine="true" />

	<Button 
	    android:id="@+id/sign_up_button"
	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
 	    android:layout_below="@+id/new_password_confirm"
 	    android:text="@string/sign_up_button"
 	    android:layout_margin="10dp"
        android:textColor="#FFF"
 	    android:onClick="registerAttempt"
 	    android:background="@drawable/button_item" />
   
  
   
  
  
    
</RelativeLayout>