
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d8f4ff"
    >
 
    
    
   <ImageView
       android:layout_width="150dp"
       android:layout_height="150dp"
       android:layout_marginTop="20dp"
       android:layout_marginBottom="40dp"
       android:src="@drawable/flock_mobile_image" 
       android:id="@+id/add_friends_button"
       android:layout_centerHorizontal="true"/>

       <Button
           android:id="@+id/events_button"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_centerHorizontal="true"
           android:text="@string/events_button"
           android:layout_below="@+id/add_friends_button" 
           android:onClick="toEvents"/>

     

       <Button
           android:id="@+id/friends_button"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:onClick="toFriends"
           android:layout_centerHorizontal="true"
           android:layout_below="@+id/events_button"
           android:text="@string/friends_button" />
       
         <Button
           android:id="@+id/groups_button"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:onClick="toGroups"
           android:layout_centerHorizontal="true"
           android:layout_below="@+id/friends_button"
           android:text="@string/groups_button" />
    
</RelativeLayout>


